--- a/init.org
+++ b/init.org
@@ -451,7 +451,7 @@ I think this is a little too aggressive right now, but it's a cool idea.
 #+end_src
 ** Undo
 *** Undo-Fu
-#+begin_src emacs-lisp :load yes
+#+begin_src emacs-lisp :load no
 (use-package
  undo-fu
  :bind ("C-/" . undo-fu-only-undo) ("C-?" . undo-fu-only-redo))
@@ -611,6 +611,13 @@ Loving use of my old colleague [[https://github.com/r-zip][Ryan Pilgrim]]'s pack
 (use-package
  rsync-mode
  :straight '(rsync-mode :type git :host github :repo "jsigman/rsync-mode"))
+#+end_src
+** link-to-remote.el
+[[https://github.com/jsigman/link-to-remote.el][Another one of my packages]]. Did this one [[https://en.wikipedia.org/wiki/Vibe_coding][by vibe coding]].
+#+begin_src emacs-lisp :load yes
+(use-package link-to-remote
+  :straight (:host github :repo "jsigman/link-to-remote.el")
+  :bind ("C-c l" . link-to-remote))
 #+end_src
 ** Unison sync mode
 This is [[https://github.com/jsigman/unison-sync-mode][my own little package]] for syncing with Unison.
